# mixture-model

./: FitBetas.hs  LUTest.hs  TODO  TestBeta.hs  TestExponential.hs  mixture-model.cabal
Numeric/: Newton.hs
Numeric/Factorization/: LU.hs
Numeric/MixtureModel/: Beta.hs  Exponential.hs
doc/: stretched-exponential.tex
