name:                mixture-model
version:             0.2
synopsis:            Various statistical mixtures models
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          bgamari@gmail.com
copyright:           (c) 2014 Ben Gamari
category:            Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Numeric.MixtureModel.Beta, Numeric.MixtureModel.Exponential
  other-modules:       Numeric.Newton
  build-depends:       base >=4.5 && <4.9,
                       vector >=0.9 && <0.11,
                       statistics >=0.10 && < 1.0,
                       math-functions >=0.1 && <1.0,
                       log-domain >= 0.7,
                       primitive,
                       random-fu,
                       gamma,
                       vector-algorithms
  
executable test-exponential
  main-is:             TestExponential.hs
  build-depends:       base >=4.5 && <4.9,
                       vector >= 0.9 && <0.11,
                       statistics >=0.10 && < 1.0,
                       math-functions >=0.1 && <1.0,
                       log-domain >= 0.7,
                       primitive,
                       random-fu,
                       vector-algorithms,
                       gamma,
                       mwc-random
  
